<resources>
    <string name="app_name">eBan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="content_description">content_description</string>
    <string name="main_event_new_event">New eBan</string>
    <string name="main_event_event_title">Title</string>
    <string name="main_event_event_content">Content</string>
    <string name="action_create_save">Save</string>
    <string name="event_create_save_empty">Nothing to save.eBan discarded</string>
    <string name="event_menu_item_favorite">favorite</string>
    <string name="event_menu_item_share">share</string>
    <string name="event_menu_item_edit">edit</string>
    <string name="event_menu_item_delete">delete</string>


    <string name="btn_name_clear">C</string>
    <string name="btn_name_mod">%</string>
    <string name="btn_name_emb">(  )</string>
    <string name="btn_name_div">/</string>
    <string name="btn_name_0">0</string>
    <string name="btn_name_1">1</string>
    <string name="btn_name_2">2</string>
    <string name="btn_name_3">3</string>
    <string name="btn_name_4">4</string>
    <string name="btn_name_5">5</string>
    <string name="btn_name_6">6</string>
    <string name="btn_name_7">7</string>
    <string name="btn_name_8">8</string>
    <string name="btn_name_9">9</string>
    <string name="btn_name_point">.</string>
    <string name="btn_name_multiple">x</string>
    <string name="btn_name_minus">-</string>
    <string name="btn_name_add">+</string>
    <string name="btn_name_op">+/-</string>
    <string name="btn_name_equal">=</string>
    <string name="progress_title">progress_title</string>
    <string name="progress_message">progress_message</string>
    <string name="msg_ret_success">msg_ret_success</string>
    <string name="msg_ret_warning">msg_ret_warning</string>
    <string name="msg_ret_fault">msg_ret_fault</string>
    <string name="msg_ret_command">msg_ret_command</string>
    <string name="msg_ret_memory">msg_ret_memory</string>
    <string name="msg_ret_user_stop">msg_ret_user_stop</string>
</resources>
