<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_event_save"
        android:title="@string/action_create_save"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_event_edit"
        android:icon="@drawable/ic_menu_event_edit"
        android:title="@string/event_menu_item_edit"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true" />

    <item
        android:id="@+id/action_event_favorite"
        android:icon="@drawable/fav_gray"
        android:title="@string/event_menu_item_favorite"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true" />

    <item
        android:id="@+id/action_event_share"
        android:icon="@drawable/ic_menu_event_share"
        android:title="@string/event_menu_item_share"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true" />

    <item
        android:id="@+id/action_event_delete"
        android:title="@string/event_menu_item_delete"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

</menu>
