<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|end"
        android:textColor="#000"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="3"
        tools:text="33" />

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical|end"
        android:textColor="#5C5CD7"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        app:layout_constraintVertical_weight="2"
        tools:text="56" />

    <Button
        android:id="@+id/btn_c"
        style="@style/Keyboard.Function.Warning"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_clear"
        app:layout_constraintBottom_toTopOf="@+id/btn_7"
        app:layout_constraintEnd_toStartOf="@+id/btn_emb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_mod"
        style="@style/Keyboard.Function"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_mod"
        app:layout_constraintBottom_toBottomOf="@+id/btn_emb"
        app:layout_constraintEnd_toStartOf="@+id/btn_div"
        app:layout_constraintStart_toEndOf="@+id/btn_emb"
        app:layout_constraintTop_toTopOf="@+id/btn_emb" />

    <Button
        android:id="@+id/btn_emb"
        style="@style/Keyboard.Function"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_emb"
        app:layout_constraintBottom_toBottomOf="@+id/btn_c"
        app:layout_constraintEnd_toStartOf="@+id/btn_mod"
        app:layout_constraintStart_toEndOf="@+id/btn_c"
        app:layout_constraintTop_toTopOf="@+id/btn_c" />

    <Button
        android:id="@+id/btn_div"
        style="@style/Keyboard.Function"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_div"
        app:layout_constraintBottom_toBottomOf="@+id/btn_mod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_mod"
        app:layout_constraintTop_toTopOf="@+id/btn_mod" />


    <Button
        android:id="@+id/btn_7"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_7"
        app:layout_constraintBottom_toTopOf="@+id/btn_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_c"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_8"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_8"
        app:layout_constraintBottom_toBottomOf="@+id/btn_7"
        app:layout_constraintEnd_toStartOf="@+id/btn_9"
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        app:layout_constraintTop_toTopOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_9"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_9"
        app:layout_constraintBottom_toBottomOf="@+id/btn_8"
        app:layout_constraintEnd_toStartOf="@+id/btn_multiple"
        app:layout_constraintStart_toEndOf="@+id/btn_8"
        app:layout_constraintTop_toTopOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_multiple"
        style="@style/Keyboard.Function"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_multiple"
        app:layout_constraintBottom_toBottomOf="@+id/btn_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_9"
        app:layout_constraintTop_toTopOf="@+id/btn_9" />


    <Button
        android:id="@+id/btn_4"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_4"
        app:layout_constraintBottom_toTopOf="@+id/btn_1"
        app:layout_constraintEnd_toStartOf="@+id/btn_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_7"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_5"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_5"
        app:layout_constraintBottom_toBottomOf="@+id/btn_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_6"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        app:layout_constraintTop_toTopOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_6"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_6"
        app:layout_constraintBottom_toBottomOf="@+id/btn_5"
        app:layout_constraintEnd_toStartOf="@+id/btn_minus"
        app:layout_constraintStart_toEndOf="@+id/btn_5"
        app:layout_constraintTop_toTopOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_minus"
        style="@style/Keyboard.Function"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_minus"
        app:layout_constraintBottom_toBottomOf="@+id/btn_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_6"
        app:layout_constraintTop_toTopOf="@+id/btn_6" />


    <Button
        android:id="@+id/btn_1"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_1"
        app:layout_constraintBottom_toTopOf="@+id/btn_op"
        app:layout_constraintEnd_toStartOf="@+id/btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_4"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_2"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_2"
        app:layout_constraintBottom_toBottomOf="@+id/btn_1"
        app:layout_constraintEnd_toStartOf="@+id/btn_3"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:layout_constraintTop_toTopOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_3"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_3"
        app:layout_constraintBottom_toBottomOf="@+id/btn_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintStart_toEndOf="@+id/btn_2"
        app:layout_constraintTop_toTopOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_add"
        style="@style/Keyboard.Function"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_add"
        app:layout_constraintBottom_toBottomOf="@+id/btn_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_3"
        app:layout_constraintTop_toTopOf="@+id/btn_3" />


    <Button
        android:id="@+id/btn_op"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_op"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_0"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_0"
        app:layout_constraintBottom_toBottomOf="@+id/btn_op"
        app:layout_constraintEnd_toStartOf="@+id/btn_point"
        app:layout_constraintStart_toEndOf="@+id/btn_op"
        app:layout_constraintTop_toTopOf="@+id/btn_op" />

    <Button
        android:id="@+id/btn_point"
        style="@style/Keyboard.Number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_point"
        app:layout_constraintBottom_toBottomOf="@+id/btn_0"
        app:layout_constraintEnd_toStartOf="@+id/btn_equal"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        app:layout_constraintTop_toTopOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_equal"
        style="@style/Keyboard.Function"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btn_name_equal"
        app:layout_constraintBottom_toBottomOf="@+id/btn_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_point"
        app:layout_constraintTop_toTopOf="@+id/btn_point" />

</androidx.constraintlayout.widget.ConstraintLayout>